# jobseeker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  me.txt  pyproject.toml  telegram_bot.py  test_sheets.py  warmup.tex
.github/workflows/: deploy.yml
compiler/: Dockerfile  main.py  pyproject.toml
jobseeker/: agent.py  cv_creator_agent.py  cv_tools.py  google_tools.py  job_search_agent.py  tools.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
